--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
     "@angular/youtube-player": "^13.2.5",
+    "axios": "^0.26.1",
     "jquery": "^3.6.0",
     "ngx-slick-carousel": "^0.5.1",
     "rxjs": "~6.6.0",
